# triageAgent

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  app.py  baseline_results.json  env.py  inference.py  openenv.yaml  proof_validator.py  pyproject.toml  requirements.txt  upload_hf.py  validate.py
scratch/: test_scores.py
server/: app.py
