[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-triage"
version = "1.0.0"
description = "A real-world customer support ticket triage and routing environment"
authors = [
    { name = "Sanyam Chaudhary", email = "chaudharysanyam987@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["openenv", "reinforcement-learning", "customer-support", "triage", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openenv>=0.1.13",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/sanyamChaudhary27/customer-support-triage"
Repository = "https://github.com/sanyamChaudhary27/triageAgent"

[tool.setuptools]
packages = ["server"]
py-modules = ["env", "inference"]

[tool.openenv]
name = "customer-support-triage"
entry_point = "env:CustomerSupportTriageEnv"
